# character_simulation_skills

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  __init__.py  __main__.py  _fix_sql.py  ace_trauma.py  attachment.py  autoresearch-dashboard.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  base.py  big_five.py  cli.py  cognitive_bias.py  conversation_history.py  defense_mechanism.py  diri_gent.py  emotion_decay.py  emotion_vocabulary.py  fisher_love.py  foucault.py  gottman.py  gross_regulation.py  kohlberg.py  marion.py  maslow.py  occ_emotion.py  orchestrator.py  package-lock.json  package.json  personality_state_machine.py  plutchik_emotion.py  ptsd_trigger.py  pyproject.toml  registry.py  response_generator.py  sdt_motivation.py  (+6 more)
benchmark/: batch_zhihu.py  evidence_chain_eval.py  generate_zhihu_json.py  improved_benchmark.py  mock_provider.py  real_llm_benchmark.py  run_benchmark.py  scenario_generator.py  scenarios.py  zhihu_scenarios.json  zhihu_scenarios.py
cli/: __init__.py  commands.py  display.py  hud.py  input.py  main.py  repl.py  stream.py  theme.py
config/: assistant.md  memory.md  tools.md
core/: __init__.py  agent_loop.py  base.py  cache_manager.py  consciousness.py  context_assembly.py  continuous_engine.py  cron.py  curator_scheduler.py  emotion_decay.py  emotion_vocabulary.py  episodic_memory.py  fsm.py  json_parser.py  manifest.py  mind_state.py  multi_agent.py  offline_consolidation.py  orchestrator.py  params.py  params_modulator.py  private_space.py  profile_isolation.py  provider.py  registry.py  runtime.py  runtime_facts.py  (+16 more)
(+320 files in other folders)
