[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "character-mind"
version = "2.0.0"
description = "五层认知编排角色心理模拟框架 — 基于 CLARION 认知架构 + Scherer 评估理论"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "X3evendren"},
]
keywords = ["psychology", "cognitive-architecture", "character-simulation", "emotion", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Psychology",
]
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
character-mind = "character_mind.cli:main"

[tool.setuptools.packages.find]
include = ["character_mind*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "SIM105", # try-except-pass
]
exclude = [
    ".git",
    ".claude",
    "__pycache__",
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
